--- a/p8105_hw1_ms6360.md
+++ b/p8105_hw1_ms6360.md
@@ -1,9 +1,11 @@
 ms6360 - Homework 1
 ================
 
-I’m an R Markdown document!
+# Problem 1
 
-# Section 1
+``` r
+data("penguins", package = "palmerpenguins")
+```
 
 Here’s a **code chunk** that samples from a *normal distribution*:
 
@@ -16,4 +18,4 @@ length(samp)
 
 # Section 2
 
-I can take the mean of the sample, too! The mean is -0.149381.
+I can take the mean of the sample, too! The mean is -0.1252931.
