--- a/p8105_hw1_ms6360.md
+++ b/p8105_hw1_ms6360.md
@@ -1,21 +1,137 @@
 ms6360 - Homework 1
 ================
+Maisie Sun
+2022-09-24
 
 # Problem 1
 
 ``` r
+library(tidyverse)
 data("penguins", package = "palmerpenguins")
 ```
 
-Here’s a **code chunk** that samples from a *normal distribution*:
+Here are some descriptions of the `penguins` dataset:
+
+-   There are 344 observations of 8 variables (344 rows and 8 columns).
+
+-   Each row depicts a penguin subject and there are 344 penguins
+    studied.
+
+-   The 8 variables that were measured are: species, island, bill length
+    in mm, bill depth in mm, flipper length in mm, body mass in g, sex,
+    and year of data collection.
+
+-   The mean flipper length is 200.92.
+
+Now, onto the scatterplot
 
 ``` r
-samp = rnorm(100)
-length(samp)
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
 ```
 
-    ## [1] 100
+![](p8105_hw1_ms6360_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
 
-# Section 2
+``` r
+ggsave("penguins_scatter_plot.pdf", heigh = 4, width = 6)
+```
 
-I can take the mean of the sample, too! The mean is -0.1252931.
+# Problem 2
+
+Creating a dataframe to include:
+
+-   a random sample of size 10 from a standard Normal distribution
+
+-   a logical vector indicating whether elements of the sample are
+    greater than 0
+
+-   a character vector of length 10
+
+-   a factor vector of length 10, with 3 different factor “levels”
+
+``` r
+my_df = 
+  tibble(
+    random = rnorm(n = 10),
+    vec_logical = random > 0,
+    vec_char = c("Hello", "my", "name", "is", "Maisie", "and", "here", "are", "few", "words"),
+    vec_factor = factor(c("high", "middle", "low", "low", "high", "middle", "high", "low", "middle", "high"))
+    )
+my_df
+```
+
+    ## # A tibble: 10 × 4
+    ##    random vec_logical vec_char vec_factor
+    ##     <dbl> <lgl>       <chr>    <fct>     
+    ##  1 -0.832 FALSE       Hello    high      
+    ##  2  0.921 TRUE        my       middle    
+    ##  3  0.819 TRUE        name     low       
+    ##  4  1.09  TRUE        is       low       
+    ##  5  0.790 TRUE        Maisie   high      
+    ##  6  0.477 TRUE        and      middle    
+    ##  7 -0.787 FALSE       here     high      
+    ##  8  1.92  TRUE        are      low       
+    ##  9  0.587 TRUE        few      middle    
+    ## 10  0.634 TRUE        words    high
+
+``` r
+mean(pull(my_df, random))
+```
+
+    ## [1] 0.5621603
+
+``` r
+mean(pull(my_df, vec_logical))
+```
+
+    ## [1] 0.8
+
+``` r
+mean(pull(my_df, vec_char)) 
+```
+
+    ## Warning in mean.default(pull(my_df, vec_char)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+``` r
+mean(pull(my_df, vec_factor))
+```
+
+    ## Warning in mean.default(pull(my_df, vec_factor)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+Running the code, numeric and logical vectors work and the means were
+calculated. Character and factor vectors did not work. For the warning
+message for character and factor vectors is “argument is not numeric or
+logical: returning NA”.
+
+When explicitly converting a logical, character, and factor variable to
+numeric, it looks like this:
+
+``` r
+my_df = 
+  tibble(
+    random = rnorm(n = 10),
+    vec_logical = random > 0,
+    vec_char = c("Hello", "my", "name", "is", "Maisie", "and", "here", "are", "few", "words"),
+    vec_factor = factor(c("high", "middle", "low", "low", "high", "middle", "high", "low", "middle", "high")),
+    logical_num = as.numeric(pull(my_df, vec_logical)),
+    char_num = as.numeric(pull(my_df, vec_char)),
+    factor_num = as.numeric(pull(my_df, vec_factor))
+    )
+my_df
+
+mean(pull(my_df, random))
+mean(pull(my_df, logical_num))
+mean(pull(my_df, char_num)) 
+mean(pull(my_df, factor_num))
+```
+
+When running the code, no warning message was displayed. Logical, and
+factor vectors that were converted into numeric vector had a mean
+calculated. For the character vector, after being converted into
+numeric, the values were all “NA”, which is appropriate because there
+was no way to assign values to words.
