--- a/p8105_hw1_ms6360.md
+++ b/p8105_hw1_ms6360.md
@@ -53,20 +53,37 @@ my_df =
   tibble(
     random = rnorm(n = 10),
     vec_logical = random > 0,
-    vec_char = c("Hello", "my", "name", "is", "Maisie", "and", "here", "are", "few", "words"),
+    vec_char = c("a", "b", "c", "d", "e", "f", "g", "h", "i", "j"),
     vec_factor = factor(c("high", "middle", "low", "low", "high", "middle", "high", "low", "middle", "high"))
     )
+my_df
+```
 
+    ## # A tibble: 10 × 4
+    ##     random vec_logical vec_char vec_factor
+    ##      <dbl> <lgl>       <chr>    <fct>     
+    ##  1  1.56   TRUE        a        high      
+    ##  2 -2.27   FALSE       b        middle    
+    ##  3  1.14   TRUE        c        low       
+    ##  4  1.95   TRUE        d        low       
+    ##  5 -1.79   FALSE       e        high      
+    ##  6  0.459  TRUE        f        middle    
+    ##  7  1.42   TRUE        g        high      
+    ##  8  0.213  TRUE        h        low       
+    ##  9  1.17   TRUE        i        middle    
+    ## 10 -0.0692 FALSE       j        high
+
+``` r
 mean(pull(my_df, random))
 ```
 
-    ## [1] -0.1265759
+    ## [1] 0.378582
 
 ``` r
 mean(pull(my_df, vec_logical))
 ```
 
-    ## [1] 0.4
+    ## [1] 0.7
 
 ``` r
 mean(pull(my_df, vec_char)) 
@@ -87,34 +104,28 @@ mean(pull(my_df, vec_factor))
     ## [1] NA
 
 Running the code, numeric and logical vectors work and the means were
-calculated. Character and factor vectors did not work. For the warning
-message for character and factor vectors is “argument is not numeric or
-logical: returning NA”.
+calculated. Character and factor vectors did not work and the mean was
+not calculated. For the warning message for character and factor vectors
+is “argument is not numeric or logical: returning NA”.
 
 When explicitly converting a logical, character, and factor variable to
 numeric, it looks like this:
 
 ``` r
-my_df = 
-  tibble(
-    random = rnorm(n = 10),
-    vec_logical = random > 0,
-    vec_char = c("Hello", "my", "name", "is", "Maisie", "and", "here", "are", "few", "words"),
-    vec_factor = factor(c("high", "middle", "low", "low", "high", "middle", "high", "low", "middle", "high")),
-    logical_num = as.numeric(pull(my_df, vec_logical)),
-    char_num = as.numeric(pull(my_df, vec_char)),
-    factor_num = as.numeric(pull(my_df, vec_factor))
-    )
-my_df
-
-mean(pull(my_df, random))
-mean(pull(my_df, logical_num))
-mean(pull(my_df, char_num)) 
-mean(pull(my_df, factor_num))
+as.numeric(pull(my_df, vec_logical))
+as.numeric(pull(my_df, vec_char))
+as.numeric(pull(my_df, vec_factor))
 ```
 
-When running the code, no warning message was displayed. Logical, and
-factor vectors that were converted into numeric vector had a mean
-calculated. For the character vector, after being converted into
-numeric, the values were all “NA”, which is appropriate because there
-was no way to assign values to words.
+After turning the logical, character, and factor variable into numeric,
+only the character variable was unable to be turned into numeric. The
+warning message shows: “NAs introduced by coercion”.
+
+This explains why the character variable cannot have the mean calculated
+because it cannot be converted into a numeric variable.
+
+The factor variable can now have its mean being calculated, being 1.9,
+in contrast to the first mean calculation which was impossible. This
+shows that R is unable to recognize an ordinal variable once it is
+converted into a numeric variable. This is something to be careful when
+dealing with ordinal variables.
