--- a/p8105_hw1_ms6360.md
+++ b/p8105_hw1_ms6360.md
@@ -29,7 +29,7 @@ Now, onto the scatterplot
 ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
 ```
 
-![](p8105_hw1_ms6360_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
+![](p8105_hw1_ms6360_files/figure-gfm/for%20scatterplot-1.png)<!-- -->
 
 ``` r
 ggsave("penguins_scatter_plot.pdf", heigh = 4, width = 6)
@@ -60,24 +60,24 @@ my_df
 ```
 
     ## # A tibble: 10 × 4
-    ##     random vec_logical vec_char vec_factor
-    ##      <dbl> <lgl>       <chr>    <fct>     
-    ##  1  1.56   TRUE        a        high      
-    ##  2 -2.27   FALSE       b        middle    
-    ##  3  1.14   TRUE        c        low       
-    ##  4  1.95   TRUE        d        low       
-    ##  5 -1.79   FALSE       e        high      
-    ##  6  0.459  TRUE        f        middle    
-    ##  7  1.42   TRUE        g        high      
-    ##  8  0.213  TRUE        h        low       
-    ##  9  1.17   TRUE        i        middle    
-    ## 10 -0.0692 FALSE       j        high
+    ##    random vec_logical vec_char vec_factor
+    ##     <dbl> <lgl>       <chr>    <fct>     
+    ##  1 -0.254 FALSE       a        high      
+    ##  2  1.92  TRUE        b        middle    
+    ##  3  1.52  TRUE        c        low       
+    ##  4 -0.841 FALSE       d        low       
+    ##  5  0.329 TRUE        e        high      
+    ##  6  1.02  TRUE        f        middle    
+    ##  7  0.506 TRUE        g        high      
+    ##  8 -0.194 FALSE       h        low       
+    ##  9  0.878 TRUE        i        middle    
+    ## 10  0.125 TRUE        j        high
 
 ``` r
 mean(pull(my_df, random))
 ```
 
-    ## [1] 0.378582
+    ## [1] 0.5010954
 
 ``` r
 mean(pull(my_df, vec_logical))
@@ -104,9 +104,13 @@ mean(pull(my_df, vec_factor))
     ## [1] NA
 
 Running the code, numeric and logical vectors work and the means were
-calculated. Character and factor vectors did not work and the mean was
-not calculated. For the warning message for character and factor vectors
-is “argument is not numeric or logical: returning NA”.
+calculated. For the logical vector, when calculating the mean of a
+Boolean operator, R will assign TRUE as 1 and FALSE as 0. Therefore, the
+mean can be calculated.
+
+Character and factor vectors did not work and the mean was not
+calculated. For the warning message for character and factor vectors is
+“argument is not numeric or logical: returning NA”.
 
 When explicitly converting a logical, character, and factor variable to
 numeric, it looks like this:
